# Atlas

./: .coverage  .env.example  .gitignore  CLAUDE.md  Dockerfile  PRD.md  SUMMARY.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: launch.json
.claude/plans/: dashboard-improvements.md
.github/workflows/: ci.yml
alembic/: env.py
blueprint/audit_atlas/: 00_current_state_summary.md  01_repo_map.md  02_architecture_verification.md  03_feature_gap_analysis.md  04_security_and_governance_review.md  05_data_and_api_review.md  06_code_quality_and_tech_debt.md  07_operability_review.md  08_recommended_target_architecture.md  09_execution_plan.md  10_risk_register.md  11_exec_brief.md  12_scored_assessment.md  13_priority_backlog.md
config/: providers.yaml  routing_policy.yaml  settings.py
dashboard-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard-ui/src/: App.tsx  index.css  main.tsx
dashboard-ui/src/components/: LiveFeed.tsx
dashboard-ui/src/lib/: api.ts  constants.ts  export.ts  tokens.ts
dashboard-ui/src/pages/: Accounts.tsx  Analytics.tsx  ConversationDetail.tsx  Conversations.tsx  Import.tsx  Models.tsx  Overview.tsx  Playground.tsx  Providers.tsx  Routing.tsx  Settings.tsx  (+1 more)
nginx/: nginx.conf
scripts/: deep_test.py  deploy.sh  dev-dashboard.js  test_both_servers.py  test_ollama_integration.py  warmup-models.sh
src/a1/: app.py  dependencies.py
tests/: conftest.py  test_auth.py  test_classifier.py  test_core_pipeline.py  test_distillation.py  test_pii_masker.py  test_router_smoke.py
(+88 files in other folders)
